apps/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: servarr
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sabnzbd
          image: 11notes/sabnzbd:5.0.1
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /sabnzbd/etc
            - name: media
              mountPath: /media
            - name: downloads
              mountPath: /sabnzbd/downloads
            - name: tmp
              mountPath: /tmp
          resources:
            limits:
              memory: 8Gi
              cpu: "4"
            requests:
              memory: 256Mi
              cpu: "0.2"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: servarr-sabnzbd
        - name: media
          persistentVolumeClaim:
            claimName: servarr-jellyfin-media
        - name: downloads
          emptyDir: {}
        - name: tmp
          emptyDir: {}
