apps/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servarr-sabnzbd
  namespace: servarr
  labels:
    app.kubernetes.io/name: sabnzbd
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-oidc@kubernetescrd
spec:
  ingressClassName: ${ingress_class}
  rules:
    - host: sabnzbd.${domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: servarr-sabnzbd
                port:
                  number: 8080
